# NetFileXfer

./: CMakeLists.txt  README.md  bench_xfer.json
src/: .xfer.c.kate-swp  CMakeLists.txt  client.c  core.c  core.h  server.c  utils.c  utils.h  xfer.c  xfer.h
test/: CMakeLists.txt  bench_xfer.cpp  test_xfer.cpp  testutils.cpp  testutils.h
